Fix legal note bg on dark mode

--- a/app/assets/stylesheets/application/flash_messages.css
+++ b/app/assets/stylesheets/application/flash_messages.css
@@ -29,7 +29,7 @@
 }
 
 .FlashMessage--info {
-	background: var(--color-blue-20);
+	background: var(--color-bg2);
 }
 
 .FlashMessage a {
